[gd_scene load_steps=6 format=3 uid="uid://bwk47s85w0xvk"]

[ext_resource type="Script" path="res://TileVisualDisplay/SketchpadWindow.gd" id="1_cm8as"]
[ext_resource type="PackedScene" uid="uid://bg8rvyokyatv8" path="res://TileVisualDisplay/LayerCompositeDisplay.tscn" id="2_3yw5a"]
[ext_resource type="PackedScene" uid="uid://bw4rf58nqw8dx" path="res://TileVisualDisplay/sublayer_operations.tscn" id="3_pets3"]
[ext_resource type="PackedScene" uid="uid://ckbryhmvnye4g" path="res://Utils/load_object_dialog.tscn" id="6_j0pgi"]
[ext_resource type="PackedScene" uid="uid://dmarwfkn1e40n" path="res://Utils/save_object_dialog.tscn" id="7_70lgv"]

[node name="SketchpadWindow" type="Window"]
position = Vector2i(0, 40)
size = Vector2i(500, 500)
script = ExtResource("1_cm8as")

[node name="LayerCompositeDisplay" parent="." node_paths=PackedStringArray("SublayerOperations") instance=ExtResource("2_3yw5a")]
position = Vector2(-114, 25)
SublayerOperations = NodePath("../Control/VBoxContainer/SublayerOperations")

[node name="Control" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -216.0
offset_bottom = 460.0
grow_horizontal = 0
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="WidthSetter" type="SpinBox" parent="Control/VBoxContainer"]
layout_mode = 2
min_value = 1.0
value = 1.0
prefix = "Width  "

[node name="HeightSetter" type="SpinBox" parent="Control/VBoxContainer"]
layout_mode = 2
min_value = 1.0
value = 1.0
prefix = "Height "

[node name="LayerCountSetter" type="SpinBox" parent="Control/VBoxContainer"]
layout_mode = 2
min_value = 1.0
value = 1.0
prefix = "Sublayers "

[node name="CreateButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Create
"

[node name="SaveButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Save to file"

[node name="LoadButton" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Load from file"

[node name="SublayerOperations" parent="Control/VBoxContainer" node_paths=PackedStringArray("composite_display") instance=ExtResource("3_pets3")]
visible = true
layout_mode = 2
composite_display = NodePath("../../../LayerCompositeDisplay")

[node name="LoadObjectDialog" parent="." instance=ExtResource("6_j0pgi")]

[node name="SaveObjectDialog" parent="." instance=ExtResource("7_70lgv")]

[connection signal="pressed" from="Control/VBoxContainer/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="file_selected" from="LoadObjectDialog" to="." method="_on_load_object_dialog_file_selected"]
[connection signal="file_selected" from="SaveObjectDialog" to="." method="_on_save_object_dialog_file_selected"]
